# todowrite

./: .claude_init.py  .coverage  .env.todowrite  .gitattributes  .gitignore  .pre-commit-config.yaml  .ptwrc  .ruffignore  .secrets.baseline  .sqlfluff-config  AGENT.md  AGENTS.md  AGENT_STARTUP.md  AGRICULTURAL_SAFETY_COMPLIANCE_DIRECTIVES.md  API_DOCUMENTATION.md  BIN_DIRECTORY_REORGANIZATION.md  BUILD_SYSTEM.md  CHANGELOG.md  CHANGELOG.md.bak  CHANGELOG_GENERATION.md  CI_CD_HOWTO.md  CLAUDE.md  CODEBASE_EXPLORATION.md  COMPLETE_SESSION_AUDIT.md  CONTEXT_LIMITATION_DIRECTIVES.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  Codebase_Explanation.md  DEVELOPER_NOTES.md  DOCUMENTATION_TONE_TRANSFORMATION.md  ERROR_MONITORING_SOLUTIONS.md  FINAL_SESSION_CLOSURE.md  FLEET_COORDINATION_PRIMITIVES.md  FULL_TEST_SUITE_REPORT.md  GEMINI.md  GIT_COMMIT_DOCUMENTATION.md  GIT_COMMIT_SEPARATION_MANDATORY.md  IMPROVEMENT_SUMMARY.md  INSTALLATION_GUIDE.md  LOADSESSION_TEST_RESULTS.md  (+111 more)
UML/: graph.py
cli_package/: MANIFEST.in  README.md  pyproject.toml
cli_package/.claude/: agent_registry.json
cli_package/.ruff_cache/0.14.4/: 230371424757575351  3581592179286389591  4237497827044377012  4252995554317647407  4963723488196361957  7413778533530058792  8762495450289948700
cli_package/src/todowrite_cli/: __init__.py  __main__.py  claude_enforcer.py  main.py  version.py
cli_package/tests/: __init__.py
cli_package/todowrite_cli/: __init__.py  main.py  version.py
lib_package/: .coverage  MANIFEST.in  README.md  pyproject.toml  setup.py  todowrite.db
lib_package/.claude/: agent_registry.json
lib_package/.ruff_cache/0.14.4/: 1387401076801579776  19498070925855586  2434441461157843607  3499418288882040146  3645799148061724230  5169844804483231506  7387850075159344471  748265311570741801  7621851446726523892  8704835682166627463  8750095921630486423
lib_package/.ruff_cache/0.7.0/: 3392183257659073611  4943480831807122562  5436489674400718291
lib_package/configs/plans/goals/: test_goal.yaml
lib_package/exported/plans/goals/: GOAL-TEST1234567890.yaml
lib_package/exported/plans/tasks/: TSK-11B55ECA775A.yaml
lib_package/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_23f9768fcd15bd36___init___py.html  z_23f9768fcd15bd36_app_node_updater_py.html  z_23f9768fcd15bd36_app_py.html  z_23f9768fcd15bd36_constants_py.html  z_23f9768fcd15bd36_exceptions_py.html  z_23f9768fcd15bd36_project_manager_py.html  z_23f9768fcd15bd36_schema_py.html  z_23f9768fcd15bd36_types_py.html  z_23f9768fcd15bd36_utils_py.html  z_3e3678fea5e83426___init___py.html  z_3e3678fea5e83426_extract_schema_py.html  z_3e3678fea5e83426_tw_lint_soc_py.html  z_3e3678fea5e83426_tw_stub_command_py.html  z_3e3678fea5e83426_tw_trace_py.html  z_3e3678fea5e83426_tw_validate_py.html  z_4153eeb9aac48db4___init___py.html  z_4153eeb9aac48db4_version_py.html  z_84481ef28311ce1b___init___py.html  z_84481ef28311ce1b_config_py.html  z_84481ef28311ce1b_models_py.html  z_a6d02bd2decb0562___init___py.html  z_b526a6ec9908eef4___init___py.html  z_b526a6ec9908eef4_schema_validator_py.html  z_b526a6ec9908eef4_yaml_manager_py.html  z_b526a6ec9908eef4_yaml_storage_py.html
lib_package/src/todowrite/: __init__.py  api.py  build_system.py  commit_message.txt  version.py
lib_package/src/todowrite/core/: __init__.py  app.py  app_original_backup.py  exceptions.py  models.py  project_manager.py  schema.py  schema_validator 2.py  schema_validator.py  sequence_manager.py  types.py  utils.py
lib_package/src/todowrite/core/schemas/: __init__.py  (+1 more)
lib_package/src/todowrite/database/: __init__.py  config.py  models.py  node_mapping.py
lib_package/src/todowrite/storage/: __init__.py  backends.py  factory.py  node_utils.py  postgresql_backend.py  schema_validator.py  sqlite_backend.py  sqlite_unified.py  yaml_manager.py  yaml_storage.py
lib_package/src/todowrite/tools/: __init__.py  extract_schema.py  todowrite_schema_generator.py  tw_lint_soc.py  tw_stub_command.py  tw_trace.py  tw_validate.py
lib_package/src/todowrite/utils/: database_utils.py
lib_package/test_configs/: test_task.yaml
lib_package/tests/: __init__.py
lib_package/todowrite/: __init__.py  version.py
lib_package/todowrite/core/: __init__.py  app.py  types.py
lib_package/todowrite/database/: models.py
lib_package/todowrite/storage/: __init__.py  schema_validator.py  yaml_storage.py
lib_package/todowrite/tools/: extract_schema.py  tw_lint_soc.py  tw_stub_command.py  tw_trace.py  tw_validate.py
web_package/: QUICK_START.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  run_webapp.sh  stop_webapp.sh
web_package/.ruff_cache/0.14.4/: 1375244506428779530  1812115118249868500  2363463176225127464  3368417594509052036  3689801280654879820  4627137890483802693  5284375583961844845  5859132925322268215  6834583360476998677  7049436569011766619  8133375204679678581
web_package/.ruff_cache/0.7.0/: 3009113806559787491  4476469480696742339  7201864468035030131
web_package/backend/: pyproject.toml  ruff.toml
web_package/backend/.ruff_cache/0.7.0/: 9738661711911292595
web_package/backend/src/todowrite_web/: __init__.py  main.py
web_package/frontend/: .ruff.toml  index.html  package-lock.json  package.json  tailwind.config.js
web_package/frontend/src/: App.tsx  index.css  main.tsx
web_package/frontend/src/components/: HierarchicalTaskView.tsx  Layout.tsx
web_package/frontend/src/pages/: Calendar.tsx  Dashboard.tsx  Goals.tsx  Tasks.tsx
web_package/src/todowrite_web/: __init__.py  database.py  main.py
web_package/src/todowrite_web/.claude/: agent_registry.json  comprehensive_quality_enforcement.json  conventional_commits_enforcement.json  semantic_scoping_awareness.json  semantic_scoping_enforcement.json  session_heartbeat.json  session_start.json  skills_testing_workflow.json  tdd_workflow.json  workflow_enforcement.json
web_package/src/todowrite_web/api/: hierarchy.py
web_package/src/todowrite_web/backend/: __init__.py  main.py  models.py
web_package/src/todowrite_web/frontend/: jest.config.js
web_package/tests/: conftest.py
(+4862 files in other folders)
