# Root pyproject.toml for monorepo development tools
# This configures the development environment for the entire monorepo
# Individual packages are built from their own pyproject.toml files in:
# - lib_package/ (todowrite library)
# - cli_package/ (todowrite_cli)

requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Development environment configuration
[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
        "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
    "bandit>=1.7.0",
    "types-click>=7.1.0",
    "types-jsonschema>=4.0.0",
    "types-PyYAML>=6.0.12",
    "hatchling>=1.27.0",
]

# Ruff configuration for development
[tool.ruff]
line-length = 79
target-version = "py312"
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".venv",
    "venv",
    "results",
    "trace",
    "cli_package/build",
    "cli_package/dist",
    "lib_package/build",
    "lib_package/dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "T10", # flake8-debugger
    "TID", # flake8-tidy-imports
    "YTT", # flake8-2020
    "DJ",  # django security
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "C90", # mccabe complexity
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "PLW", # pylint warnings
    "ANN", # type annotations
]
ignore = [
    "S101",  # assert used (acceptable in tests)
    "T20",   # print statements (needed for CLI output)
    "S602",  # subprocess with shell=True (needed for command execution)
    "S603",  # subprocess call (needed for Docker integration - validated path)
    "PTH103", # os.makedirs (acceptable for compatibility)
    "PTH120", # os.path.dirname (acceptable for compatibility)
    "PTH123", # open() (acceptable for compatibility)
    "F823",  # local variable referenced before assignment (false positive with TYPE_CHECKING)
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "C901",  # too complex (acceptable in test cleanup functions)

    # Type annotation rules to ignore (stricter than needed)
    "ANN001", # missing-type-function-argument
    "ANN002", # missing-type-argument
    "ANN003", # missing-type-kwargs
    "ANN101", # missing-type-self (first argument of method)
    "ANN201", # missing-return-type-public-function
    "ANN202", # missing-return-type-private-function
    "ANN204", # missing-return-type-static-method
    "ANN206", # missing-return-type-class-method
    "ANN401", # any-type (sometimes needed for dynamic data)
]

# Ruff formatter configuration
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

# Ruff security audit configuration
[tool.ruff.lint.per-file-ignores]
# General test exclusions
"tests/*" = [
    "S101",  # assert used (acceptable in tests)
    "ARG001", # unused arguments in tests
    "ARG002", # unused arguments in tests
    "S608",   # hardcoded SQL

    # Lenient annotation rules for tests
    "ANN001", # missing-type-function-argument (test functions often self-documenting)
    "ANN201", # missing-return-type-public-function (test functions often return None)
]



# CLI code exclusions
"cli_package/src/todowrite_cli/*" = [
    "T20",   # print statements (needed for CLI output)
    "S603",  # subprocess call (needed for tool integration)
    "S607",  # subprocess with partial executable path

    # Lenient annotation rules for CLI code
    "ANN001", # missing-type-function-argument (CLI args often complex)
    "ANN002", # missing-type-kwargs (click decorators handle this)
    "ANN003", # missing-type-args (click decorators handle this)
    "ANN201", # missing-return-type-public-function (CLI functions often return None)
    "ANN202", # missing-return-type-private-function (internal CLI functions)
]

# Build hook specific exclusions
"_build_version_hook.py" = [
    "PLC0415",  # import at top-level (needed due to path setup)
    "ANN001",   # missing-type-function-argument (build scripts)
    "ANN201",   # missing-return-type-public-function (build scripts)
]

# Build and configuration files
"*_build_version_hook.py" = [
    "S404",  # subprocess module import (needed for build tools)
]



# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=lib_package/src/todowrite",
    "--cov=cli_package/src/todowrite_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["lib_package/src", "cli_package/src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", "cli_package", "lib_package"]
skips = ["B101", "B110", "B404", "B602", "B603", "B607"]  # Skip acceptable security warnings for CLI tool

# Coverage configuration
[tool.coverage.run]
source = ["lib_package/src", "cli_package/src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
