# Root pyproject.toml for monorepo development tools
# This configures the development environment for the entire monorepo
# Individual packages are built from their own pyproject.toml files in:
# - lib_package/ (todowrite library)
# - cli_package/ (todowrite_cli)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

requires-python = ">=3.12"

# UV workspace configuration for unified dependency management
[tool.uv.workspace]
members = [
    "lib_package",
    "cli_package",
    "web_package",
]

# UV workspace sources for internal dependencies
[tool.uv.sources]
todowrite = { workspace = true }

# Development environment configuration
[dependency-groups]
core = [
    "sqlalchemy>=2.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.4",
    "bandit>=1.8.0",
    "commitizen>=3.29.0",
    "types-click>=7.1.0",
    "types-jsonschema>=4.0.0",
    "types-PyYAML>=6.0.12",
    "hatchling>=1.27.0",
    "detect-secrets>=1.4.0",
    "sqlfluff>=3.0.0",
    "alembic>=1.17.1",
    "jsonschema>=4.25.1",
    "anthropic>=0.25.0",
    "openai>=1.12.0",
]

# Ruff configuration - 2025 industry standards
[tool.ruff]
line-length = 100
target-version = "py312"

# Docstring configuration with Google convention
[tool.pydocstyle]
convention = "google"
ignore-decorators = false  # Check decorators in docstrings
extend-exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".venv",
    "venv",
    "results",
    "trace",
    "cli_package/build",
    "cli_package/dist",
    "lib_package/build",
    "lib_package/dist",
    ".hooks/",
    "htmlcov",
    "coverage.xml",
    ".coverage",
    "*.egg-info",
    "*.so",
    "*.pyc",
    "*.pyo",
    "*.pyd",
]

[tool.ruff.lint]
# 2025 comprehensive rule selection for maximum code quality
select = [
    # Core pycodestyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings

    # Core flake8
    "F",   # pyflakes
    "C90", # mccabe complexity

    # Import and module organization
    "I",   # isort
    "TID", # flake8-tidy-imports
    "ICN", # flake8-import-conventions

    # Code quality and complexity
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "COM", # flake8-commas
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments

    # Modern Python practices
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "FA",  # flake8-future-annotations

    # Security and safety
    "S",   # flake8-bandit

    # Type annotations and documentation
    "ANN", # flake8-annotations
    "D",   # pydocstyle

    # Error handling and edge cases
    "BLE", # flake8-blind-except
    "ERA", # eradicate (commented out code)
    "PLW", # pylint warnings
    "PLE", # pylint errors
    "PLC", # pylint conventions

    # Performance and best practices
    "PERF", # perflint
    "FURB", # refurb (modern Python improvements)

    # Ruff-specific improvements
    "RUF", # Ruff-specific rules

    # Logging and output
    "G",   # flake8-logging-format
    "T20", # flake8-print (allowable with config)

    # Pathlib and file operations
    "PTH", # flake8-use-pathlib

    # DateTime and timezone handling
    "DTZ", # flake8-datetimez

    # Executable and script handling
    "EXE", # flake8-executable

    # Error message formatting
    "EM",  # flake8-errmsg

    # String formatting and quotes
    "Q",   # flake8-quotes

    # Naming conventions
    "N",   # pep8-naming

    # Built-in function shadowing
    "A",   # flake8-builtins

    # Import organization
    "TCH", # flake8-type-checking
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat

    # Debugging statements
    "T10", # flake8-debugger

    # Note: ASYNC rules will be added when available in future Ruff versions

    # Django/Flask security (if applicable)
    "DJ",  # django security
    "S",   # flake8-bandit (already included but emphasizing security)
]

# 2025-specific additional rules for modern Python
extend-select = [
    "E402",   # module level import not at top of file
    "PLC0415", # import-outside-top-level
    "RUF100", # unused noqa comment
    "RUF101", # unused noqa directive
]

ignore = [
    # Security - acceptable risks for this project
    "S101",  # assert used (acceptable in tests and contracts)
    "T20",   # print statements (needed for CLI output)
    "S602",  # subprocess with shell=True (needed for command execution)
    "S603",  # subprocess call (needed for Docker integration - validated path)
    "S607",  # subprocess with partial executable path (python is expected)

    # Compatibility - allow os module usage where pathlib isn't beneficial
    "PTH103", # os.makedirs (acceptable for compatibility)
    "PTH120", # os.path.dirname (acceptable for compatibility)
    "PTH123", # open() (acceptable for compatibility)

    # False positives and tool conflicts
    "F823",  # local variable referenced before assignment (false positive with TYPE_CHECKING)
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "C901",  # too complex (acceptable in certain cases, use RUF max-complexity instead)

    # Documentation style flexibility
    "D100",   # missing docstring in public module (not always required)
    "D104",   # missing docstring in public package (not always required)
    "D105",   # missing docstring in magic methods (often self-documenting)
    "D107",   # missing docstring in __init__ (often self-documenting)

    # Type annotation flexibility for dynamic code
    "ANN001", # missing-type-function-argument (CLI args often complex)
    "ANN002", # missing-type-argument (click decorators handle this)
    "ANN003", # missing-type-args (click decorators handle this)
    "ANN201", # missing-return-type-public-function (CLI functions often return None)
    "ANN202", # missing-return-type-private-function (internal CLI functions)
    "ANN204", # missing-return-type-static-method (__init__ methods)
    "ANN206", # missing-return-type-class-method (class methods)
    "ANN401", # any-type (sometimes needed for dynamic data)

    # Async-related rules will be added when available

    # Performance - acceptable trade-offs
    "PERF102", # use-f-string-for-formatting (allow other formatting for readability)
    "PERF203", # try-except-in-loop (acceptable when needed for error handling)

    # Refurb - modern improvements that aren't critical
    "FURB101", # reload-module (not commonly used)
    "FURB103", # define-attr-protected-private (allow underscore convention)
]

# Ruff formatter configuration - 2025 standards
[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable experimental formatter features for better code formatting
docstring-code-format = true
docstring-code-line-length = "dynamic"

# 2025-specific performance and complexity settings
[tool.ruff.lint.mccabe]
max-complexity = 10  # Industry standard for maintainable code

[tool.ruff.lint.per-file-ignores]
# Test files - more lenient rules
"tests/*" = [
    "S101",    # assert used (acceptable in tests)
    "ARG001",  # unused arguments in tests
    "ARG002",  # unused arguments in tests
    "S608",    # hardcoded SQL (acceptable in test fixtures)
    "ANN001",  # missing-type-function-argument (test functions often self-documenting)
    "ANN201",  # missing-return-type-public-function (test functions often return None)
    "D",       # docstring requirements (test names are self-documenting)
    "PLR2004", # magic value comparison (acceptable in tests)
    "S311",    # suspicious non-cryptographic random usage (acceptable in tests)
]

# CLI code - practical allowances
"cli_package/src/todowrite_cli/*" = [
    "T20",   # print statements (needed for CLI output)
    "S603",  # subprocess call (needed for tool integration)
    "S607",  # subprocess with partial executable path
    "ANN001", # missing-type-function-argument (CLI args often complex)
    "ANN002", # missing-type-kwargs (click decorators handle this)
    "ANN003", # missing-type-args (click decorators handle this)
    "ANN201", # missing-return-type-public-function (CLI functions often return None)
    "ANN202", # missing-return-type-private-function (internal CLI functions)
    "PLW1514", # subprocess-without-shell-equals-false (needed for CLI tools)
]

# Build scripts and tools - maximum flexibility
".hooks/*" = [
    "ANN001", "ANN201", "ANN202", "ANN204", # type annotations (build scripts may be dynamic)
    "S603", "S604", "S607",             # subprocess usage (needed for tool execution)
    "E501", "E722", "BLE001",            # style (simpler in scripts)
    "PLC0415", "PLW1510", "DTZ005",      # imports and subprocess (intentional)
    "PLW2901", "RET505", "Q000", "W292",  # minor style issues
    "D",                               # docstring requirements (scripts often self-documenting)
    "PERF",                            # performance (not critical in scripts)
]

# Claude configuration files
".claude/*" = [
    "ANN001", "ANN201", "ANN202", "ANN204", # type annotations (config scripts)
    "S603", "S604", "S607",             # subprocess usage (needed for setup)
    "E501", "E722", "BLE001",            # style (simpler in scripts)
    "PLC0415", "PLW1510", "DTZ005",      # imports and subprocess (intentional)
    "PLW2901", "RET505", "Q000", "W292",  # minor style issues
    "D",                               # docstring requirements (config files)
    "PERF",                            # performance (not critical in configs)
]

# Build hooks and development tools
"*_build_version_hook.py" = [
    "S404", "PLC0415", "ANN001", "ANN201", # build script allowances
    "D",                                 # docstring requirements (build scripts)
]




# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    # Coverage disabled to prevent hanging tests - re-enable explicitly when needed
    # "--cov=lib_package/src/todowrite",
    # "--cov=cli_package/src/todowrite_cli",
    # "--cov-report=term-missing",
    # "--cov-report=html",
    # "--cov-fail-under=80",
]
testpaths = ["tests"]
pythonpath = ["lib_package/src", "cli_package/src", "web_package/src", "dev_tools"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Bandit configuration - 2025 industry standards
[tool.bandit]
# Exclude directories that don't need security scanning
exclude_dirs = [
    "tests",        # Test files have acceptable security practices
    "build", "dist", # Build artifacts
    ".venv", "venv", # Virtual environments
    "htmlcov",      # Coverage reports
    ".git",         # Git metadata
    "__pycache__",  # Python cache
    ".pytest_cache", # Pytest cache
    "coverage.xml", # Coverage artifacts
]

# Skip tests and examples that use acceptable security practices
tests = [
    "B101",   # assert_used (acceptable in tests)
    "B110",   # try_except_pass (acceptable in test cleanup)
    "B404",   # import_subprocess (subprocess is needed and validated)
    "B603",   # subprocess_without_shell_equals_false (needed for CLI tools)
    "B607",   # start_process_with_partial_path (python is expected)
    "B602",   # subprocess_popen_with_shell_equals_true (needed for command execution)
]

# 2025-specific configuration for modern security
[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]  # Skip assert checks in test files

[tool.bandit.hardcoded_tmp_directory]
# Allow common temp directory patterns that are acceptable
subdirs = ["/tmp", "/var/tmp", "/usr/tmp"]

# Bandit logging configuration
[tool.bandit.logging]
log_config = true  # Enable logging configuration for security events

# File permissions and security
[tool.bandit.other]
# Check for weak cryptography and common security issues
# But allow subprocess usage with proper validation
# and allow shell=True when needed for CLI integration

# Coverage configuration
[tool.coverage.run]
source = ["lib_package/src", "cli_package/src", "web_package/src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    ".venv/*",
    "venv/*",
    "htmlcov/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    "build/*",
    "dist/*",
    "*.egg-info/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

# Commitizen configuration for conventional commits
[tool.commitizen]
name = "conventional_commits"
version = "0.4.1"
version_files = [
    "lib_package/pyproject.toml:version",
    "cli_package/pyproject.toml:version",
    "web_package/pyproject.toml:version",
    "VERSION",
]
tag_format = "v{version}"
bump_message = "chore(release): bump version from ${current_version} to ${new_version}"
major_version_zero = true
update_changelog_on_bump = true
style = [
    "feat",
    "fix",
    "docs",
    "style",
    "refactor",
    "perf",
    "test",
    "build",
    "ci",
    "chore",
    "revert"
]
scope_choices = [
    "lib",
    "cli",
    "web",
    "tests",
    "docs",
    "build",
    "config"
]
